# idastar-puzzle-solver

./: LICENSE  README.md  práctica4.cabal
.github/workflows/: haskell.yml
app/: Main.hs
src/: Distance.hs  IdaStar.hs  Puzzle.hs
test/: DistanceSpec.hs  IdaStarSpec.hs  PuzzleSpec.hs
